Bug 389741 - Can't delete a newly created author profile (Krita 4.0.0-beta1.1.appimage)
Summary: Can't delete a newly created author profile (Krita 4.0.0-beta1.1.appimage)
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: 4.0.0-beta.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-02-01 09:08 UTC by mvowada
Modified: 2018-02-01 14:25 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description mvowada 2018-02-01 09:08:04 UTC
(Ubuntu 14.04 - Krita 4.0.0-beta1.1.appimage)

In the "Author" setting, the trashcan icon "Delete the author profile" does nothing. Steps to reproduce:

    1) open menu > "Settings" > "Configure Krita..." > "Author"
    2) click the plus ("+") icon, to create a new author 
    3) click the trashcan icon, to delete the new author

Actual Results: Krita doesn't delete the new author.
Expected Results: delete the new author.
Comment 1 mvowada 2018-02-01 09:35:15 UTC
To summarize, after investigating a bit more: 

    1) I had only 1 profile set
    2) I added a 2nd profile
    3) I tried to delete the 2nd profile, but the trashcan icon was disabled

    4) I added a 3rd profile
    5) then I successfully deleted the 3rd profile
    6) and I successfully deleted the 1st profile

The odd part is point 3) when I tried to delete the 2nd profile but the trashcan icon was disabled.

I would let this report open for now. Please, feel free to close it if you find it's working well for you. Thanks.
Comment 2 Halla Rempt 2018-02-01 13:40:47 UTC
Yes, something is a bit wonky there.
Comment 3 Halla Rempt 2018-02-01 14:25:31 UTC
Git commit e2f73ee82070f09371c48813902bf3928972f95c by Boudewijn Rempt.
Committed on 01/02/2018 at 14:24.
Pushed by rempt into branch 'master'.

Make sure Anonymous is the first entry in the Authors combobox

M  +44   -46   libs/widgets/KoConfigAuthorPage.cpp
M  +1    -0    libs/widgetutils/xmlgui/ktoolbar.cpp

https://commits.kde.org/krita/e2f73ee82070f09371c48813902bf3928972f95c