Make sure Anonymous is the first entry in the Authors combobox

BUG:389741